--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h3 class="education-conteiner-top">Education </h3>
 
         <div class="education-conteiner">
-            <p class="education-place-2">Go IT Academy</p>
+            <p class="education-place-2">IT School GoIT</p>
             <p class="education-period-goit">Fullstack Developed <span class="education-separator">|</span> 2023 - 2024
             </p>
         </div>
@@ -123,10 +123,40 @@
 
     <div class="sidebar-content">
     <!-- Contacts -->
-<div class="contacts-conteiner">
-    <h3 class="contacs-title">Contacts</h3>
-    <p class="contacts-item"><span class="contacts-type">C: </span> <a class="contacts-link" href="tell:+380667869460">+38 066 786 94 60</a></p>
-    <p class="contacts-item"><span class="contacts-type">E: </span> <a class="contacts-link" href="mailto:yanakryvonis@gmail.com">yanakryvonis@gmail.com</a></p>
+<div class="contacts-container">
+    <h3 class="contacts-title">Contacts</h3>
+    <p class="contacts-item">
+        <span class="contacts-type"> </span>
+        <img src="./svg/phone.svg" alt="Telegram Icon" height="20px">
+        <a class="contacts-link" href="tel:+380667869460">+38 066 786 94 60</a>
+    </p>
+    <p class="contacts-item">
+        <span class="contacts-type"> </span>
+        <img src="./svg/envelop.svg" alt="Telegram Icon" height="20px">
+        <a class="contacts-link" href="mailto:yanakryvonis@gmail.com">yanakryvonis@gmail.com</a>
+    </p>
+    <p class="contacts-item">
+        <img src="./svg/telegram.svg" alt="Telegram Icon" height="20px">
+        <a class="contacts-link" href="https://t.me/iana_samar">Telegram</a>
+    </p>
+    <p class="contacts-item">
+        <span class="contacts-type"> </span>
+        <img src="./svg//linkedin.svg" alt="LinkedIn Icon" height="20px">
+        <a class="contacts-link" href="https://www.linkedin.com/in/yana-kryvonis-7a146930a">LinkedIn
+            
+        </a>
+    </p>
+    <p class="contacts-item">
+        <span class="contacts-type"> </span>
+            <img src="./svg//github.svg" alt="GitHub Icon" height="20px">
+        <a class="contacts-link" href="https://github.com/Yana160916">
+            GitHub
+        </a>
+    </p>
+    <p class="contacts-item">
+        <img src="./svg/location.svg" alt="GitHub Icon" height="20px">
+        Ukraine, Dnipro
+    </p>
 </div>
 
 <!-- Tech Skills -->
@@ -159,11 +189,21 @@
 
 <!-- Language -->
 <div class="soft-skills-conteiner">
-    <h3 class="soft-skills-title">Language</h3>
+    <h3 class="soft-skills-title">Languages</h3>
     <ul class="soft-skills-list">
         <li class="soft-skills-item">English - Intermediate</li>
         <li class="soft-skills-item">Ukrainian - Native</li>
         <li class="soft-skills-item">Russian - Fluent</li>
+    </ul>
+</div>
+
+
+<!-- Summary -->
+<div class="soft-skills-conteiner">
+    <h3 class="soft-skills-title">Summary</h3>
+        <p class="soft-skills-item">HTML, CSS, JS, TS, React - this is new, but already quite a successful experience in my life. I approach completing
+        tasks with responsibility and perseverance. I complete the task quite easily and efficiently. I worked both on my own
+        and in team work. I have the ability to learn quickly and perform assigned tasks efficiently.</p>
     </ul>
 </div>
 
